# ProcSentry

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_web.py
app/: __init__.py  config.py  diagnostics.py  factory.py  logging_config.py  main.py  schemas.py
app/collectors/: __init__.py  docker.py  procfs.py  psutil_collector.py  systemd.py
app/collectors/common/: __init__.py  capabilities.py  (+4 more)
app/core/: __init__.py  command_normalizer.py  duplicate_detector.py  fingerprint.py  port_mapper.py  process_tree.py  resource_tracker.py  rules_engine.py  runtime_state.py  scanner.py  security_engine.py
app/database/: models.py  repository.py  session.py
app/services/: alert_service.py  healing_service.py  host_services.py  metrics_service.py  process_service.py  remote_ssh.py  runtime_registry.py
app/tui/: __init__.py  actions.py  dashboard.py  tables.py
app/web/: app.py  schemas.py  security.py  suggestions.py  url_prefix.py
config/: production.example.yml  rules.example.yml  vpswatch.yml
docs/: deployment-linux.md  examples.md
scripts/: backup.sh  benchmark_scan.py  install.sh
systemd/: procsentry.logrotate  vpswatch.service
tests/: __init__.py  fakes.py  scenarios.py  test_api.py  test_command_normalizer.py  test_database.py  test_diagnostics.py  test_duplicate_detector.py  test_fingerprint.py  test_linux_procfs_fixtures.py  test_platform_collectors.py  test_port_mapper.py  test_process_tree.py  test_realistic_process_scenarios.py  test_remote_ssh.py  test_scanner_cache_metrics.py  test_security_engine.py
(+42 files in other folders)
