[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procsentry"
version = "0.1.0"
description = "Lightweight Linux VPS process intelligence and monitoring daemon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "psutil>=5.9.8",
  "sqlalchemy>=2.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "paramiko>=3.4",
  "rich>=13.7",
  "textual>=0.70",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
procsentry = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
